--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -1,5 +1,13 @@
 .square {
 	border: 2px solid black;
-	height: 25px;
-	width: 25px;
+	height: 10vw;
+	width: 10vw;
+}
+
+.square:nth-of-type(3n + 0) {
+	margin-right: 10px;
+}
+
+.thirdRow {
+	margin-bottom: 10px;
 }
