Style square numbers and number buttons

--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -1,6 +1,10 @@
 .square {
+	align-items: center;
 	border: 2px solid black;
+	display: flex;
+	font-size: 9vw;
 	height: 10vw;
+	justify-content: center;
 	width: 10vw;
 }
 
