--- a/src/components/NumberButton/NumberButton.module.css
+++ b/src/components/NumberButton/NumberButton.module.css
@@ -1,3 +1,11 @@
 .number {
-	font-size: 28px;
+	align-items: center;
+	border: 1px solid black;
+	border-radius: 36px;
+	cursor: pointer;
+	display: flex;
+	font-size: 32px;
+	height: 36px;
+	justify-content: center;
+	width: 36px;
 }
