--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -2,6 +2,7 @@
 	align-items: center;
 	background-color: white;
 	border: 2px solid black;
+	box-sizing: border-box;
 	cursor: pointer;
 	display: flex;
 	font-size: 9vw;
@@ -23,6 +24,9 @@
 
 .square.selected {
 	border-color: blue;
+	border-width: 4px;
+	transform: scale(1.2);
+	z-index: 101;
 }
 
 .thirdRow {
