--- a/src/components/Info/Info.module.css
+++ b/src/components/Info/Info.module.css
@@ -1,3 +1,14 @@
 .container {
 	text-align: right;
 }
+
+.author a {
+	color: dodgerblue;
+	font-weight: bold;
+	text-decoration: none;
+	transition: color 0.5s linear;
+}
+
+.author a:hover {
+	color: lightskyblue;
+}
