--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,10 @@ code {
 	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
 
+:root {
+	--theme-color: dodgerblue;
+}
+
 #root {
 	display: flex;
 	justify-content: center;
