--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ code {
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
+	height: 100vh;
 	justify-content: center;
 	padding: 20px;
-	width: 100%;
+	width: 100vw;
 }
