--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -1,12 +1,13 @@
 .square {
 	align-items: center;
-	background-color: white;
-	border: 2px solid black;
+	background-color: transparent;
+	border: 2px solid rgb(253, 130, 237);
+	box-shadow: 0 0 5px 5px rgba(253, 73, 229, 0.5), 0 0 5px 5px rgba(253, 73, 229, 0.5) inset;
 	box-sizing: border-box;
-	color: var(--theme-color);
+	color: white;
 	cursor: pointer;
 	display: flex;
-	font-size: 8vh;
+	font-size: 7vh;
 	height: 8vh;
 	justify-content: center;
 	transform-origin: center;
@@ -14,13 +15,16 @@
 	width: 8vh;
 }
 
+.square:not(.prefilled) {
+	text-shadow: 0 0 0.2em rgba(255, 255, 255, 0.5);
+}
+
 .square:hover {
-	transform: scale(1.2);
-	z-index: 100;
+	background-color: rgba(255, 255, 255, 0.2);
 }
 
 .square.selected {
-	border-color: var(--theme-color);
+	border-color: white;
 	border-width: 4px;
 	transform: scale(1.2);
 	z-index: 101;
@@ -35,6 +39,6 @@
 }
 
 .prefilled {
-	color: black;
+	color: rgba(253, 73, 229, 0.6);
 	pointer-events: none;
 }
