--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@ code {
 
 #root {
 	align-items: center;
+	background: linear-gradient(180deg, rgba(85, 37, 117, 1) 0%, rgba(54, 10, 87, 1) 64%, rgba(147, 39, 132, 1) 100%);
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
