--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -1,8 +1,8 @@
 .square {
 	align-items: center;
 	background-color: transparent;
-	border: 2px solid rgb(253, 130, 237);
-	box-shadow: 0 0 5px 5px rgba(253, 73, 229, 0.5), 0 0 5px 5px rgba(253, 73, 229, 0.5) inset;
+	border: 2px solid var(--theme-color);
+	box-shadow: 0 0 5px 5px var(--glow-color), 0 0 5px 5px var(--glow-color) inset;
 	box-sizing: border-box;
 	color: white;
 	cursor: pointer;
@@ -39,6 +39,6 @@
 }
 
 .prefilled {
-	color: rgba(253, 73, 229, 0.6);
+	color: var(--glow-color);
 	pointer-events: none;
 }
