Update header style

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,13 @@
 .header {
+	color: white;
 	display: flex;
 	justify-content: space-between;
-	margin-bottom: 20px;
+	margin-bottom: 40px;
 	width: 100%;
 }
 
 .title {
-	font-size: 36px;
+	font-family: "Erica One";
+	font-size: 48px;
+	line-height: 48px;
 }
