--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -11,7 +11,6 @@
 	height: 8vh;
 	justify-content: center;
 	transform-origin: center;
-	transition: transform 0.5s linear;
 	width: 8vh;
 }
 
@@ -24,9 +23,9 @@
 }
 
 .square.selected {
+	background-color: rgba(255, 255, 255, 0.2);
 	border-color: white;
 	border-width: 4px;
-	transform: scale(1.2);
 	z-index: 101;
 }
 
