--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -7,6 +7,7 @@
 	color: white;
 	cursor: pointer;
 	display: flex;
+	filter: hue-rotate(0deg);
 	font-size: 7vh;
 	height: 8vh;
 	justify-content: center;
