Create Assist feature and Assist level 1

--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -42,3 +42,13 @@
 	color: var(--glow-color);
 	pointer-events: none;
 }
+
+.square.duplicate {
+	color: var(--red-glow);
+	text-shadow: 0 0 0.2em #f00d;
+}
+
+.square.duplicate:not(.prefilled) {
+	background-color: #f003;
+	color: red;
+}
