--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -45,10 +45,10 @@
 
 .square.duplicate {
 	color: var(--red-glow);
-	text-shadow: 0 0 0.2em #f00d;
+	text-shadow: 0 0 0.2em rgba(255, 0, 0, 0.867);
 }
 
 .square.duplicate:not(.prefilled) {
-	background-color: #f003;
+	background-color: rgba(255, 0, 0, 0.2);
 	color: red;
 }
