--- a/src/index.css
+++ b/src/index.css
@@ -11,26 +11,26 @@ code {
 }
 
 :root {
-	--blue-glow: #00ccff80;
-	--blue-theme: #00ccff;
+	--blue-glow: rgba(0, 203, 255, 0.502);
+	--blue-theme: rgb(0, 204, 255);
 
-	--green-glow: #00ff0080;
-	--green-theme: #00ff00;
+	--green-glow: rgba(0, 255, 0, 0.502);
+	--green-theme: rgb(0, 255, 0);
 
-	--pink-glow: #fd49e580;
+	--pink-glow: rgba(253, 73, 229, 0.502);
 	--pink-gradient: linear-gradient(
 		180deg,
 		rgba(85, 37, 117, 1) 0%,
 		rgba(54, 10, 87, 1) 64%,
 		rgba(147, 39, 132, 1) 100%
 	);
-	--pink-theme: #fd82ed;
+	--pink-theme: rgb(253, 130, 237);
 
-	--red-glow: #ff000080;
-	--red-theme: #ff0000;
+	--red-glow: rgba(255, 0, 0, 0.502);
+	--red-theme: rgb(255, 0, 0);
 
-	--yellow-glow: #ffff0080;
-	--yellow-theme: #ffff00;
+	--yellow-glow: rgba(255, 255, 0, 0.502);
+	--yellow-theme: rgb(255, 255, 0);
 }
 
 button {
