Switch back to hex colors, they seem to work fine now

--- a/src/components/SudokuSquare/SudokuSquare.css
+++ b/src/components/SudokuSquare/SudokuSquare.css
@@ -1,5 +1,5 @@
 .square.solvedFlash {
-	--box-shadow-color: rgba(255, 255, 255, 0.9);
+	--box-shadow-color: #ffffffe6;
 	border-color: "white";
 	color: "white";
 }
