Deploy all property to reset button styling

--- a/src/index.css
+++ b/src/index.css
@@ -31,11 +31,7 @@ code {
 }
 
 button {
-	background-color: transparent;
-	border: none;
-	color: inherit;
-	font-size: inherit;
-	padding: none;
+	all: inherit;
 }
 
 button:focus {
