--- a/src/components/NumberButton/NumberButton.module.css
+++ b/src/components/NumberButton/NumberButton.module.css
@@ -5,12 +5,12 @@
 	color: var(--theme-color);
 	cursor: pointer;
 	display: flex;
-	font-size: 32px;
-	height: 72px;
+	font-size: 4vh;
+	height: 9vh;
 	justify-content: center;
 	opacity: inherit;
 	transition: background-color 0.5s linear, border-color 0.5s linear, color 0.5s linear;
-	width: 72px;
+	width: 9vh;
 }
 
 .number:hover {
