--- a/src/components/SudokuApp/SudokuApp.module.css
+++ b/src/components/SudokuApp/SudokuApp.module.css
@@ -5,13 +5,17 @@
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
-	padding: 20px;
+	padding: 2.5vh;
+	position: relative;
 	width: 100vw;
 }
 
 .layout {
+	align-items: center;
 	display: flex;
-	justify-content: space-evenly;
+	flex-wrap: wrap;
+	height: 100%;
+	justify-content: space-around;
 	width: 100%;
 }
 
