--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -8,6 +8,11 @@
 
 .title {
 	font-family: "Erica One";
-	font-size: 6vh;
-	line-height: 6vh;
+	font-size: 2em;
+}
+
+@media (min-height: 768px) {
+	.title {
+		font-size: 3em;
+	}
 }
