Prevent squares from highlighting on tap

--- a/src/components/SudokuSquare/SudokuSquare.module.css
+++ b/src/components/SudokuSquare/SudokuSquare.module.css
@@ -20,7 +20,7 @@
 	text-shadow: 0 0 0.2em #ffffff80;
 }
 
-.square:hover {
+#root > div:not(:global(.isTouch)) .square:hover {
 	background-color: #ffffff33;
 }
 
