--- a/src/components/SettingsButton/SettingsButton.module.css
+++ b/src/components/SettingsButton/SettingsButton.module.css
@@ -4,6 +4,6 @@
 	transition: color 0.5s linear;
 }
 
-#root > div:not(:global(.isTouch)) .button:hover {
+:global(#root) > div:not(:global(.isTouch)) .button:hover {
 	color: white;
 }
