--- a/src/components/SettingsMenu/SettingsMenu.module.css
+++ b/src/components/SettingsMenu/SettingsMenu.module.css
@@ -12,7 +12,7 @@
 	transition: color 0.5s linear;
 }
 
-#root > div:not(:global(.isTouch)) .gearButton:hover {
+:global(#root) > div:not(:global(.isTouch)) .gearButton:hover {
 	color: white;
 }
 
