--- a/src/components/SudokuApp/SudokuApp.module.css
+++ b/src/components/SudokuApp/SudokuApp.module.css
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100vh;
+	overflow: hidden;
 	padding: 2.5vh;
 	position: relative;
 	width: 100vw;
